# oracle-connector-app

./: .env  .gitignore  CODEBASE_OVERVIEW.md  ORACLE_SETUP.md  README.md  pyproject.toml
.cursor/rules/: development-workflow.mdc  documentation-guidelines.mdc  documentation.mdc  frontend.mdc  new-sql-app.mdc  observability.mdc  project-structure.mdc  setup.mdc  standards.mdc  task-management.mdc
app/clients/: __init__.py
app/sql/: client_version.sql  extract_column.sql  extract_database.sql  extract_schema.sql  extract_table.sql  filter_metadata.sql  tables_check.sql  test_authentication.sql
frontend/static/: script.js  styles.css
frontend/templates/: index.html
tests/unit/: test_workflow.py
